--- a/Back-End/src/main/resources/application.yml
+++ b/Back-End/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
         enable_lazy_load_no_trans: true
         format_sql: true
     show-sql: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
   # send-mail
   mail:
